# pc

./: CMakeLists.txt  CMakePresets.json  readme.md
benchmarks/: histogram.benchmark.cpp
res/: test.sh  test.txt
src/: main.cpp
src/Process/: Process.cpp  Process.h
src/actor/: ApuActor.cpp  ApuActor.h  BaseActor.cpp  BaseActor.h  BurnsActor.cpp  BurnsActor.h  HomerActor.cpp  HomerActor.h  IActor.h  KidActor.cpp  KidActor.h  MargeActor.cpp  MargeActor.h  NelsonActor.cpp  NelsonActor.h  SmithersActor.cpp  SmithersActor.h  SnakeActor.cpp  SnakeActor.h  Wallet.cpp  Wallet.h
src/actors/: Client.cpp  Client.h  Supplier.cpp  Supplier.h
src/arhiver/: Archiver.cpp  Archiver.h
src/audio/: AudioConstants.h  AudioPlayer.cpp  AudioPlayer.h  AudioTypes.h  MiniaudioInit.cpp
src/audio/capture/: AudioCapture.cpp  AudioCapture.h
src/audio/playback/: AudioPlayback.cpp  AudioPlayback.h
src/bank/: Bank.cpp  Bank.h
src/common/: Economy.h  Types.h
src/console/: ConsoleArgs.cpp  ConsoleArgs.h  ConsoleEncoding.cpp  ConsoleHistogram.cpp  ConsoleHistogram.h
src/controller/: IController.h
src/controller/life/: LifeController.cpp  LifeController.h
src/controller/simulation/: SimulationController.cpp  SimulationController.h
src/controller/theme/: ThemeController.cpp  ThemeController.h
src/controller/toast/: ToastController.cpp  ToastController.h
src/histogram/: Histogram.cpp  Histogram.h  HistogramBuilder.cpp  HistogramBuilder.h  HistogramBuilderAtomic.cpp  HistogramBuilderLocal.cpp
src/image/: Image.cpp  Image.h
src/logger/: ConsoleLogger.cpp  ConsoleLogger.h
src/logger/logger/: ConsoleLogger.cpp
src/logger/timer/: ScopedTimer.h
src/model/life/: LifeModel.cpp  LifeModel.h
src/model/simulation/: SimulationModel.cpp  SimulationModel.h
src/model/theme/: ThemeModel.cpp  ThemeModel.h
src/model/toast/: ToastModel.cpp  ToastModel.h
src/net/packet/: AudioPacket.cpp  AudioPacket.h
src/net/receiver/: RadioReceiver.cpp  RadioReceiver.h
src/net/station/: RadioStation.cpp  RadioStation.h
src/parser/: Parser.cpp  Parser.h  TrackParser.cpp  TrackParser.h
src/process/: Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h
src/queue/: AudioQueue.h
src/scene/: Scene.cpp  Scene.h
src/scene/main/: MainScene.cpp  MainScene.h
src/simulation/: Simulation.cpp  Simulation.h
src/synth/: Synthesizer.cpp  Synthesizer.h
src/system/: AppConfig.h  Application.cpp  Application.h  Observer.h
src/system/process/: Process.h  ProcessManager.cpp  ProcessManager.h
src/system/threadPool/: ThreadPool.cpp  ThreadPool.h
src/timer/: ScopedTimer.cpp  ScopedTimer.h
src/view/: IView.h
src/view/life/: LifeView.cpp  LifeView.h
src/view/simulation/: SimulationView.cpp  SimulationView.h
src/view/theme/: ThemeView.cpp  ThemeView.h
src/view/toast/: ToastView.cpp  ToastView.h
src/visualizer/: AudioVisualizer.cpp  AudioVisualizer.h  VisualizerThread.cpp  VisualizerThread.h
src/warehouse/: Warehouse.cpp  Warehouse.h
tests/: Process.test.cpp  ProcessManager.test.cpp  histogram.test.cpp
